1998-05-28  Marcus G. Daniels  <mgd@ute.santafe.edu>

	* simtoolsgui.h: Include activity.h.

1998-05-22  Alex Lancaster  <alex@santafe.edu>

	* simtoolsgui.h (ActionCache, probeDisplayManager,
	initSimtoolsGUI): Added doc tags (//G) to global variables and
	symbols.
	(SET_WINDOW_GEOMETRY_RECORD_NAME,CREATE_PROBE_DISPLAY,
	CREATE_COMPLETE_PROBE_DISPLAY, CREATE_ARCHIVED_PROBE_DISPLAY,
	CREATE_ARCHIVED_COMPLETE_PROBE_DISPLAY): Added doc tags (//#) for
	macros.

1998-05-07  Marcus G. Daniels  <mgd@wijiji.santafe.edu>

	* ProbeDisplayManager.m: Include simtoolsgui.h.
	([ProbeDisplayManager
	-_createDefaultProbeDisplayFor_:setWindowGeometryRecordName:],
	[ProbeDisplayManager
	-_createProbeDisplayFor_:setWindowGeometryRecordName:],
	[ProbeDisplayManager
	-createArchivedProbeDisplayFor:variableName:],
	[ProbeDisplayManager -createProbeDisplayFor:],
	[ProbeDisplayManager -createDefaultProbeDisplayFor:],
	[ProbeDisplayManager
	-createArchivedDefaultProbeDisplayFor:variableName:]): Return an
	object conforming to the ProbeDisplay protocol.
	([ProbeDisplayManager
	-createArchivedCompleteProbeDisplayFor:variableName:],
	[ProbeDisplayManager -createCompleteProbeDisplayFor:]): Return an
	object conforming to the CompleteProbeDisplay protocol.

	* simtoolsgui.h (_createProbeDisplay,
	createArchivedProbeDisplayNamed): Return id conforming to
	ProbeDisplay protocol.
	(_createCompleteProbeDisplay,
	createArchivedCompleteProbeDisplayNamed): Return an object
	conforming to CompleteProbeDisplay protocol.
	(-createProbeDisplayFor:,
	-createArchivedProbeDisplayFor:variableName:): Return an object
	conforming to ProbeDisplay protocol.
	(-createCompleteProbeDisplayFor:,
	-createArchivedCompleteProbeDisplayFor:variableName:): Return an
	object conforming to the CompleteProbeDisplay protocol.
	(-createDefaultProbeDisplayFor:,
	-createArchivedDefaultProbeDisplayFor:variableName:):
	Declare.  Return an object conforming to the CompleteProbeDisplay
	protocol.
	(-getMarkedForDrop): Return BOOL.
	