@@ -5,6 +5,7 @@
 
 #import <simtoolsgui/GUISwarm.h>
 #import <simtoolsgui.h>
+#import <simtoolsgui/global.h> // buildWindowGeometryRecordName
 
 @implementation GUISwarm
 
